# python-eq3bt

./: .pre-commit-config.yaml  CHANGELOG  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  requirements_all.txt  requirements_test.txt  setup.py  tox.ini
.github/workflows/: ci.yml
bluepy_devices/devices/: eq3btsmart.py
bluepy_devices/lib/: connection.py
eq3bt/: __init__.py  bleakconnection.py  connection.py  eq3btsmart.py  eq3cli.py  gattlibconnection.py  structures.py
eq3bt/tests/: test_thermostat.py
utils/: eq3cli.py
