[tool.poetry]
name = "python-eq3bt"
version = "0.1.12"
description = "EQ3 bluetooth thermostat support library"
license = "MIT"
authors = ["Markus Peter <mpeter@emdev.de>"]
maintainers = ["Teemu R. <tpr@iki.fi>"]
repository = "https://github.com/rytilahti/python-eq3bt"
readme = "README.md"
packages = [
  { include = "eq3bt" }
]
include = ["CHANGELOG"]

[tool.poetry.scripts]
eq3cli = "eq3bt.eq3cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
bluepy = ">=1.0.5"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
toml = "*"
tox = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = "eq3bt"
known_third_party = ["click", "pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
