[tool.poetry]
name = "python-eq3bt"
version = "0.2"
description = "EQ3 bluetooth thermostat support library"
license = "MIT"
authors = ["Teemu R. <tpr@iki.fi>", "Markus Peter <mpeter@emdev.de>"]
repository = "https://github.com/rytilahti/python-eq3bt"
readme = "README.md"
packages = [
  { include = "eq3bt" }
]
include = ["CHANGELOG"]

[tool.poetry.scripts]
eq3cli = "eq3bt.eq3cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
construct = "*"
bleak = "*"
gattlib = { version = "*", optional = true }
bluepy = { version = ">=1.0.5", optional = true }

[tool.poetry.extras]
gattlib = ["gattlib"]
bluepy = ["bluepy"]

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
toml = "*"
tox = "*"
codecov = "*"
pytest-cov = "*"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = "eq3bt"
known_third_party = ["click", "pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
